# SpdLogAndroidSample

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/steve/cho/spdlogsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  logger-inl.h  logger.h  spdlog-inl.h  spdlog.h  tweakme.h  version.h
app/src/main/cpp/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  pattern_formatter-inl.h  pattern_formatter.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  thread_pool-inl.h  thread_pool.h
app/src/main/cpp/spdlog/fmt/: bin_to_hex.h  fmt.h
app/src/main/cpp/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  wincolor_sink-inl.h  wincolor_sink.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
